--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- css -->
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <a href="">Our Blog</a>
+      <a href="">About</a>
+      <a href="">Services</a>
+      <a href="">Portofolio</a>
+      <a href="">Team</a>
+    </nav>
+  </body>
 </html>
