--- a/tutorial-javascript/index.html
+++ b/tutorial-javascript/index.html
@@ -9,11 +9,8 @@
   <body>
     <p>Cashadi</p>
     <script>
-      var x = 2;
-      var y = 3;
-      if (x < y) {
-        alert('var x lebih kecil dari var y');
-      }
+      var a = 5;
+      console.log('var a bernilai ' + typeof a);
     </script>
   </body>
 </html>
