--- a/tutorial-javascript/index.html
+++ b/tutorial-javascript/index.html
@@ -10,7 +10,9 @@
     <p>Cashadi</p>
     <script>
       var a = 5;
-      console.log('var a bernilai ' + typeof a);
+      var b = 10;
+      var benar = a < b ? 'benar' : 'salah';
+      console.log(benar);
     </script>
   </body>
 </html>
