--- a/tutorial-javascript/index.html
+++ b/tutorial-javascript/index.html
@@ -9,10 +9,10 @@
   <body>
     <p>Cashadi</p>
     <script>
-      var a = 5;
-      var b = 10;
-      var benar = a < b ? 'benar' : 'salah';
-      console.log(benar);
+      var nilai = 70;
+      if (nilai >= 90) {
+        alert('Anda Terbaik');
+      }
     </script>
   </body>
 </html>
